--- a/views/partials/sidebarAdmin.hbs
+++ b/views/partials/sidebarAdmin.hbs
@@ -58,6 +58,7 @@
                 <div id="collapse3" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href="/tablePedidos">Todos</a>
+                        <a class="collapse-item" href="/tableNoEntregados">Por Entegar</a>
                         <a class="collapse-item" href="/tablePendientes">Pendientes de Pago</a>
                     </div>
                 </div>
