Tablas ganancias repartidores

--- a/views/partials/sidebarAdmin.hbs
+++ b/views/partials/sidebarAdmin.hbs
@@ -78,6 +78,7 @@
                         <a class="collapse-item" href="/tableProvee">Proveedores</a>
                         <a class="collapse-item" href="/tableClientes">Clientes</a>
                         <a class="collapse-item" href="/tableProductos">Productos</a>
+                        <a class="collapse-item" href="/tableRepartidores">Repartidores</a>
                     </div>
                 </div>
             </li>
