--- a/views/partials/modalPedido.hbs
+++ b/views/partials/modalPedido.hbs
@@ -13,7 +13,7 @@
 
                         <div class="form-group">
                             <label>Fecha de Entrega:</label>
-                            <input type="date" class="form-control" name="fecha" required>
+                            <input type="date" class="form-control" id="fechaActual" name="fecha" value="" required>
                         </div>
                         <hr>
                         <label>Dirección: </label>
@@ -36,4 +36,16 @@
     </div>
   
 
-  
+  <script>
+    window.onload = function(){
+  var fecha = new Date(); //Fecha actual
+  var mes = fecha.getMonth()+1; //obteniendo mes
+  var dia = fecha.getDate(); //obteniendo dia
+  var ano = fecha.getFullYear(); //obteniendo año
+  if(dia<10)
+    dia='0'+dia; //agrega cero si el menor de 10
+  if(mes<10)
+    mes='0'+mes //agrega cero si el menor de 10
+  document.getElementById('fechaActual').value=ano+"-"+mes+"-"+dia;
+}
+</script>
