--- a/views/factura.hbs
+++ b/views/factura.hbs
@@ -9,33 +9,39 @@
                 <div class="container-fluid">
 
                 <!-- Page Heading -->
-                    <h1 class="h3 mb-4 text-gray-800">Factura</h1>
+                    <h1 class="h3 mb-4 text-gray-800">Datos de Facturación</h1>
 
-                    <form class="user text-center" action="regcli" method="POST">
+                    <form class="user text-center" action="regfactura" method="POST">
+                        <input type="text" style="display: none;" value="{{cod_pedido}}" name="cod_pedido">
                         <div class="row">
                             <div class="col-sm-12 col-lg-6">
                         <div class="form-group">
-                            <input type="date" class="form-control" placeholder="Fecha..." name="fecha"required>
+                            <input type="date" class="form-control" id="fechaActual" name="fecha" required>
                         </div>
                                 <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Nombre y Apellido..." name="name"required>
+                            <input type="text" class="form-control" placeholder="Nombre y Apellido..." name="name" value="{{cliente.nombre_cli}}" required>
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Cédula..." name="ced" required>
+                            <input type="text" class="form-control" placeholder="Cédula..." name="ced" value="{{cliente.cedula_cli}}"  required>
                         </div>
                         <div class="form-group">
-                            <input type="email" class="form-control" placeholder="E-mail..." name="email" required>
+                            <input type="email" class="form-control" placeholder="E-mail..." name="email" value="{{cliente.email}}" required>
                         </div>
                             </div>
                             <div class="col-sm-12 col-lg-6">
                         <div class="form-group">
-                            <input type="number" class="form-control" placeholder="Teléfono..." name="tel" required  minlength="7"  maxlength="10"> 
+                            <input type="number" class="form-control" placeholder="Teléfono..." name="tel" value="{{cliente.tlf}}" required  minlength="7"  maxlength="10"> 
                         </div>
                         <div class="form-group">
-                            <input type="number" class="form-control" placeholder="Subtotal..." name="subtotal" required  min="1"> 
+                            <input type="text" class="form-control" placeholder="Dirección..." name="direccion" required> 
                         </div>
                         <div class="form-group">
-                            <input type="number" class="form-control" placeholder="Total..." name="totalf" required  min="1"> 
+                            <label>Subtotal:</label>
+                            <input type="number" class="sinborde" placeholder="Subtotal..." name="subtotal" value="{{subtotal}}" readonly> 
+                        </div>
+                        <div class="form-group">
+                            <label>Total Pago:</label>
+                            <input type="number" class="sinborde" placeholder="Total..." name="totalf" value="{{total}}" readonly> 
                         </div>
 
                             </div>
@@ -56,10 +62,10 @@
                                                 </tr>
                                             </thead>
                                             <tbody>
-                                                {{#each productos}}
+                                                {{#each resumen}}
                                                 <tr>
-                                                    <th class="text-center">{{this.nombreProd}}</th>
-                                                    <th class="text-center">{{this.cant}}</th>
+                                                    <th class="text-center">{{this.nombre_prod}}</th>
+                                                    <th class="text-center">{{this.cantidad}}</th>
                                                     <th class="text-center">{{this.total}}</th>
 
                                                 </tr>
@@ -102,9 +108,21 @@
             icon: '{{icon}}',
             showConfirmButton: '{{showConfirmButton}}',
             timer: '{{timer}}'
-        }).then(()=>{
-            window.location = '/{{ruta}}'
-        })
+        });
     </script>
     {{/if}}
+
+     <script>
+    window.onload = function(){
+  var fecha = new Date(); //Fecha actual
+  var mes = fecha.getMonth()+1; //obteniendo mes
+  var dia = fecha.getDate(); //obteniendo dia
+  var ano = fecha.getFullYear(); //obteniendo año
+  if(dia<10)
+    dia='0'+dia; //agrega cero si el menor de 10
+  if(mes<10)
+    mes='0'+mes //agrega cero si el menor de 10
+  document.getElementById('fechaActual').value=ano+"-"+mes+"-"+dia;
+}
+</script>
 </html>
