--- a/views/login.hbs
+++ b/views/login.hbs
@@ -35,21 +35,22 @@
                                 
                                 <hr>
                                 <div class="text-center text-white">
-                                    <a class="text-white" data-toggle="modal" data-target="#exampleModal">Regístrate</a>
+                                    <a class="text-white" data-toggle="modal" data-target="#exampleModal">Regístro Empleado </a>
                                 </div>
+
+                                 <div class="text-center text-white">
+                                    <a class="text-white" data-toggle="modal" data-target="#exampleModal2">Regístro Cliente </a>
+                                </div>
+                                
                                 <div class="text-center ">
 
                                 </div>
                             </div>
-
                         </div>
                     </div>
                 </div>
-
             </div>
-
         </div>
-
     </div>
 
         <footer class="page-footer font-small blue">
@@ -61,7 +62,7 @@
         <!-- Copyright -->
     </footer> 
     {{> modalLogin}}
-{{> scripts}} 
+    {{> modalCliente}}
 </body>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     {{#if alert}}
