--- a/views/factura.hbs
+++ b/views/factura.hbs
@@ -19,18 +19,18 @@
                             <input type="date" class="form-control" id="fechaActual" name="fecha" required>
                         </div>
                                 <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Nombre y Apellido..." name="name" value="{{cliente.nombre_cli}}" required>
+                            <input type="text" class="form-control" placeholder="Nombre y Apellido..." name="name" value="{{cliente.nombre_cli}}" readonly>
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Cédula..." name="ced" value="{{cliente.cedula_cli}}"  required>
+                            <input type="text" class="form-control" placeholder="Cédula..." name="ced" value="{{cliente.cedula_cli}}"  readonly>
                         </div>
                         <div class="form-group">
-                            <input type="email" class="form-control" placeholder="E-mail..." name="email" value="{{cliente.email}}" required>
+                            <input type="email" class="form-control" placeholder="E-mail..." name="email" value="{{cliente.email}}" readonly>
                         </div>
                             </div>
                             <div class="col-sm-12 col-lg-6">
                         <div class="form-group">
-                            <input type="number" class="form-control" placeholder="Teléfono..." name="tel" value="{{cliente.tlf}}" required  minlength="7"  maxlength="10"> 
+                            <input type="number" class="form-control" placeholder="Teléfono..." name="tel" value="{{cliente.tlf}}" required  minlength="7"  maxlength="10" readonly> 
                         </div>
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="Dirección..." name="direccion" required> 
