--- a/views/partials/modalLogin.hbs
+++ b/views/partials/modalLogin.hbs
@@ -24,6 +24,9 @@
                         </div>
 
                         <div class="form-group">
+                            <input type="text" class="form-control form-control-user" name="placa" placeholder="Número de Placa (Solo Repartidor)..." maxlength="6">
+                        </div>
+                        <div class="form-group">
                             <input type="email" class="form-control form-control-user" name="user" placeholder="Correo Electrónico..." required>
                         </div>
                         <div class="form-group">
