--- a/views/login.hbs
+++ b/views/login.hbs
@@ -69,12 +69,9 @@
 
                                 <hr>
                                 <div class="text-center text-white">
-                                    <a class="text-white" data-toggle="modal" data-target="#exampleModal">Regístro Empleado </a>
+                                    <a class="text-white" data-toggle="modal" data-target="#exampleModal">Regístrarse </a>
                                 </div>
 
-                                 <div class="text-center text-white">
-                                    <a class="text-white" data-toggle="modal" data-target="#exampleModal2">Regístro Cliente </a>
-                                </div>
                                 
                                 <div class="text-center ">
 
