--- a/views/client.hbs
+++ b/views/client.hbs
@@ -10,7 +10,7 @@
                 <!-- Page Heading -->
                 <h1 class="h3 mb-4 text-gray-800">Bienvenido {{ name }}</h1>
                 <div align ="center">
-                    <img src="assets/img/empleado.jpg" alt="" width="50%" height="50%">
+                    <img src="assets/img/cliente.png" alt="" width="50%" height="50%">
                 </div>
 
             </div>
