--- a/views/partials/sidebarCliente.hbs
+++ b/views/partials/sidebarCliente.hbs
@@ -20,13 +20,13 @@
 
 
             <li class="nav-item">
-                <a class="nav-link" href="">
+                <a class="nav-link" href="tusPedidos">
                     <i class="fas fa-shopping-basket"></i>
                     <span>Pedidos</span></a>
             </li>
             
             <li class="nav-item">
-                <a class="nav-link" href="">
+                <a class="nav-link" href="pendientesCliente">
                     <i class="fas fa-fw fa-comment-dollar"></i>
                     <span>Pagos Pendientes</span></a>
             </li>
