--- a/views/partials/sidebarAdmin.hbs
+++ b/views/partials/sidebarAdmin.hbs
@@ -74,12 +74,13 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Tablas Contenido:</h6>
-                        <a class="collapse-item" href="/tableUser">Usuarios</a>
-                        <a class="collapse-item" href="/tableProvee">Proveedores</a>
                         <a class="collapse-item" href="/tableClientes">Clientes</a>
+                        <a class="collapse-item" href="/tableFacturas">Facturas</a>
                         <a class="collapse-item" href="/tableProductos">Productos</a>
-                        <a class="collapse-item" href="/tableRepartidores">Repartidores</a>
-                    </div>
+                        <a class="collapse-item" href="/tableProvee">Proveedores</a>
+                        <a class="collapse-item" href="/tableRepartidores">Repartidores</a>                        
+                        <a class="collapse-item" href="/tableUser">Usuarios</a>                                                              
+                     </div>
                 </div>
             </li>
 
