--- a/views/partials/sidebarCliente.hbs
+++ b/views/partials/sidebarCliente.hbs
@@ -2,7 +2,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/repartidor">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/client">
                 <img src="assets/img/logoT.png" width="40%" alt="">
 
                 <div class="sidebar-brand-text mx-3">Cliente</div>
@@ -16,27 +16,22 @@
             </div>
 
             <!-- Nav Item - Charts -->
-
-
-
             <li class="nav-item">
                 <a class="nav-link" href="tusPedidos">
                     <i class="fas fa-shopping-basket"></i>
                     <span>Pedidos</span></a>
             </li>
-            
+
             <li class="nav-item">
                 <a class="nav-link" href="pendientesCliente">
                     <i class="fas fa-fw fa-comment-dollar"></i>
                     <span>Pagos Pendientes</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="">
+                <a class="nav-link" href="tusFacturas">
                     <i class="fas fa-file-invoice"></i>
                     <span>Facturas</span></a>
             </li>
-            
-
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
 
