--- a/views/tusPedidos.hbs
+++ b/views/tusPedidos.hbs
@@ -52,7 +52,7 @@
                                             <th class="text-center">Fecha de Entrega</th>
                                             <th class="text-center">Dirección</th>
                                             <th class="text-center">Detalles</th>
-                                            <th class="text-center">Seguimiento del Pedido</th>
+                                            <th class="text-center">Sigue tu pedido</th>
                                         </tr>
                                     </thead>
                                     <tbody>
